# proxbias

./: .gitattributes  .gitignore  Dockerfile.test  MANIFEST.in  README.md  VERSION  pyproject.toml  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: python-package.yml  python-publish.yml
data/: centromeres_hg38.tsv  hg38_scaffolds.tsv
proxbias/: .infercnv.py.swp  __init__.py  arm_centering.py  constants.py  core.py  metrics.py  scPerturb_processing_plotting.py  scPerturb_specific_loss.py  utils.py
proxbias/cpg_processing/: loading.py  transform.py
proxbias/data/: AdamsonWeissman2016_GSM2406681_10X010_b5_w100_n150.csv  FrangiehIzar2021_RNA_b5_w100_n150.csv  OmicsCNGene.csv  OmicsSomaticMutations.csv  PapalexiSatija2021_eccite_RNA_b5_w100_n150.csv  README.md  ReplogleWeissman2022_rpe1_b5_w100_n150.csv  TianKampmann2021_CRISPRi_b5_w100_n150.csv  depmap_22q4_embeddings.csv  shinyDepMap_19Q3_cluster_s.csv  u2os.csv
proxbias/depmap/: constants.py  load.py  optimized.py  process.py
proxbias/notebooks/: DepMap_22q4_vs_23q2.ipynb  DepMap_CNV_analysis.ipynb  DepMap_PB_Driver_Analysis.ipynb  DepMap_PB_Driver_Scan_sample.ipynb  DepMap_PB_Drivers.ipynb  DepMap_PB_driver_figures.ipynb  cpg0016_known_biology_benchmarks.ipynb  cpg0016_known_biology_metrics.ipynb  cpg0016_loading.ipynb  scPerturb_tables_heatmaps.ipynb  shinyDepMap benchmark.ipynb  shinyDepMap_benchmark.ipynb
proxbias/plotting/: bm_bars.py  centro_telo_scatter.py  heatmaps.py
proxbias/utils/: __init__.py  chromosome_info.py  constants.py  cosine_similarity.py  data_utils.py  depmap.py  df_tools.py  q_norm.py
requirements/: dev.in  dev_3.10.txt  dev_3.11.txt  dev_3.8.txt  dev_3.9.txt  main.in  main_3.10.txt  main_3.11.txt  main_3.8.txt  main_3.9.txt
tests/: conftest.py  test_arm_centering.py  test_core.py  test_loading.py  test_transform.py  test_utils.py
{{cookiecutter.repo_name}}/: setup.py
